[package]
name = "ios-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
futures = "0.3.30"
libp2p = { version = "0.54.1", features = [
  "noise",
  "ping",
  "tcp",
  "tokio",
  "yamux",
  "rsa",
  "quic",
  "relay",
  "dns",
  "dcutr",
  "identify",
  "macros",
] }
libp2p-stream = "0.2.0-alpha"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uniffi = "0.28.1"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
