[package]
name = "ios-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
futures = "0.3.30"
iroh-net = "0.25"
rand = "0.8"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uniffi = { version = "0.28.1", features = ["build", "cli"] }

[build-dependencies]
uniffi = { version = "0.28", features = ["build", "cli"] }

[profile.release]
opt-level = 3
lto = true
# codegen-units = 1
panic = "abort"
